# lillio-archive

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  lillio-archive.example.toml  pyproject.toml
.github/workflows/: ci.yml
scripts/: check_public_tree.py
src/lillio_archive/: __init__.py  archive.py  browser.py  cli.py  config.py  downloader.py  logging_config.py  manifest.py  metadata.py  repair.py  results.py  video_metadata.py
tests/: test_archive.py  test_browser.py  test_cli.py  test_config.py  test_downloader.py  test_logging_config.py  test_manifest.py  test_metadata.py  test_public_release.py  test_reliability.py  test_repair.py  test_results.py  test_video_metadata.py
