[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lillio-archive"
version = "0.1.0"
description = "Local, incremental archive utility for authorized Lillio media"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["archive", "backup", "lillio", "media", "playwright"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Archiving :: Backup",
]
dependencies = [
  "piexif>=1.1.3,<2",
  "playwright>=1.45,<2",
  "rich>=13,<15",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
]

[project.scripts]
lillio-archive = "lillio_archive.cli:main"

[project.urls]
Homepage = "https://github.com/ChrisBuilds/lillio-archive"
Issues = "https://github.com/ChrisBuilds/lillio-archive/issues"
Repository = "https://github.com/ChrisBuilds/lillio-archive.git"

[tool.hatch.build.targets.wheel]
packages = ["src/lillio_archive"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
