[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lillio-archive"
version = "0.1.0"
description = "Local, incremental archive utility for authorized Lillio media"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["archive", "backup", "lillio", "media", "playwright"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Archiving :: Backup",
]
dependencies = [
  "piexif>=1.1.3,<2",
  "playwright>=1.45,<2",
  "rich>=13,<15",
]

[project.optional-dependencies]
test = [
  "pyright[nodejs]>=1.1.400,<2",
  "pytest>=8,<9",
  "ruff>=0.12,<1",
]

[project.scripts]
lillio-archive = "lillio_archive.cli:main"

[project.urls]
Homepage = "https://github.com/ChrisBuilds/lillio-archive"
Issues = "https://github.com/ChrisBuilds/lillio-archive/issues"
Repository = "https://github.com/ChrisBuilds/lillio-archive.git"

[tool.hatch.build.targets.wheel]
packages = ["src/lillio_archive"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = [
  ".lillio-profile",
  "artifacts",
  "downloads",
  "exports",
]

[tool.ruff.lint]
select = [
  "B",
  "E",
  "F",
  "I",
  "SIM",
  "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pyright]
include = ["src", "tests", "scripts"]
exclude = [
  ".lillio-profile",
  "artifacts",
  "downloads",
  "exports",
]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
